src/test/deca/syntax/invalid/obtained_res/wrongReadIntsynt.res
./src/test/deca/syntax/invalid/created/ReadFloat_Int/wrongReadInt.deca:9:22: extraneous input '43' expecting ')'
